Fix alignment issues

--- a/styles.css
+++ b/styles.css
@@ -9,58 +9,45 @@ html {
 *{
     margin: 0;
     padding: 0;
+    /* border: 2px solid red; */
 }
-  .choices{
-    height: 250px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    column-gap: 200px;
-    padding-top: 10px;
-  }
 
-  .container{
-    background-color: coral;
-    height: 250px;
-    width: 300px;
-    font-size: 32px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-      }
-
-  .choice{
-    margin-top: 16px;
-    height: 180px;
-    width: 180px;
-    background-color: aquamarine;
-  }
-
-
-.vs{
-    margin-top: auto;
-    margin-bottom: auto;
-    font-size: 40px;
+body{
+  background-color: black;
+  color: aliceblue;
+  display: flex;
+  flex-direction: column;
 }
 
 .stats{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
   font-size: 40px;
   margin-top: 16px;
 }
 
-.points{
+.computer, .user{
+  width: 160px;
   display: flex;
-  justify-content: center;
-  gap: 680px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.computer p, .user p{
+  margin-top: 48px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
 #message{
   text-align: center;
   font-size: 32px;
-  margin-top: 24px;
+  margin-top: 132px;
 }
 
 .select{
@@ -74,10 +61,12 @@ html {
 
 .options{
   display: flex;
-  gap: 90px;
+  width: 100%;
+  justify-content: space-around;
 }
 
 img{
-  height: 150px;
-  width: 150px;
-}
+  height: 160px;
+  width: 160px;
+  }
+
